working second view 'hotel'

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <nav>
   <a routerLink="/room" routerLinkActive="active">Rooms</a>
+  <a routerLink="/hotel" routerLinkActive="active">Hotel</a>
 </nav>
 
 <router-outlet></router-outlet>
