--- a/src/app/hotel/hotel-list/hotel-list.component.html
+++ b/src/app/hotel/hotel-list/hotel-list.component.html
@@ -4,10 +4,10 @@
       <section>
         <header class="header">
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-1">
               <h1>Users</h1>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-9">
 
             </div>
             <div class="col-md-2">
@@ -23,7 +23,6 @@
         <table class="table">
           <thead>
           <tr>
-            <th>#</th>
             <th>First Name</th>
             <th>Last Name</th>
             <th>pet number</th>
@@ -32,14 +31,56 @@
           </thead>
           <tbody>
           <tr *ngFor="let baseOwnerInfo of baseOwnerInfos">
-            <th scope="row">{{baseOwnerInfo.id}}</th>
-            <td>{{baseOwnerInfo.firstName}}</td>
-            <td>{{baseOwnerInfo.lastName}}</td>
-            <td>{{baseOwnerInfo.petNumbers}}</td>
-            <!--<button type="button" class="btn btn-success" (click)="openModal(baseOwnerInfo.id)">Show-->
-              <!--Details</button>-->
-            <!--<button type="button" class="btn btn-danger" (click)="deleteOwner(baseOwnerInfo.id)">Delete</button>-->
-            <td>
+            <td class="col-md-3">{{baseOwnerInfo.firstName}}</td>
+            <td class="col-md-3">{{baseOwnerInfo.lastName}}</td>
+            <td class="col-md-2">{{baseOwnerInfo.petNumbers}}</td>
+
+            <td class="col-md-4">
+              <div class="container">
+                <!-- Trigger the modal with a button -->
+                <button type="button" class="btn btn-info" data-toggle="modal" data-target="#petModal" >Details
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="petModal" role="dialog">
+                  <div class="modal-dialog">
+
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Modal Header</h4>
+                      </div>
+                      <div class="modal-body">
+                        <table class="table">
+                          <thead>
+                          <tr>
+                            <th class="col-md-3">Name</th>
+                            <th class="col-md-6">Comment</th>
+                            <th class="col-md-2">Type</th>
+                            <th class="col-md-1">Room</th>
+                          </tr>
+                          </thead>
+                          <tbody>
+                          <tr *ngFor="let ownerPet of ownerPets">
+                            <td>{{ownerPet.name}}</td>
+                            <td>{{ownerPet.comment}}</td>
+                            <td>{{ownerPet.petType}}</td>
+                            <td>{{ownerPet.roomNumber}}</td>
+                          </tr>
+                          </tbody>
+                        </table>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+
+              </div>
+
             </td>
           </tr>
 
