--- a/src/app/hotel/hotel-list/hotel-list.component.html
+++ b/src/app/hotel/hotel-list/hotel-list.component.html
@@ -38,7 +38,8 @@
             <td class="col-md-4">
               <div class="container">
                 <!-- Trigger the modal with a button -->
-                <button type="button" class="btn btn-info" data-toggle="modal" data-target="#petModal" >Details
+                <button type="button" class="btn btn-info" data-toggle="modal" data-target="#petModal"
+                        (click)="allOwnerPets(baseOwnerInfo.id)">Details
                 </button>
 
                 <!-- Modal -->
