--- a/src/app/hotel/hotel-list/hotel-list.component.html
+++ b/src/app/hotel/hotel-list/hotel-list.component.html
@@ -11,7 +11,7 @@
 
             </div>
             <div class="col-md-2">
-
+              <button type="button" class="btn btn-primary" (click)="redirectNewRoomPage()">New Customer</button>
             </div>
           </div>
 
@@ -41,6 +41,7 @@
                 <button type="button" class="btn btn-info" data-toggle="modal" data-target="#petModal"
                         (click)="allOwnerPets(baseOwnerInfo.id)">Details
                 </button>
+                <button type="button" class="btn btn-danger" (click)="deleteOwner(baseOwnerInfo.id)">Delete</button>
 
                 <!-- Modal -->
                 <div class="modal fade" id="petModal" role="dialog">
