Add dropdown to adding new customer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
+  <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">Heaven For Pets</a>
     </div>
-    <ul class="nav navbar-nav">
+    <ul class="nav navbar-collapse">
       <li><a routerLink="/room" routerLinkActive="active">Rooms</a></li>
       <li><a routerLink="/hotel" routerLinkActive="active">Hotel</a></li>
     </ul>
