--- a/src/app/hotel/hotel-create/hotel-create.component.html
+++ b/src/app/hotel/hotel-create/hotel-create.component.html
@@ -77,7 +77,7 @@
 
               <div class="row">
                 <div class="col-xs-6 col-md-2">
-                  <label class="sr-only">Pet Name</label>
+                  <label>Pet Name</label><br>
                   <input type="text"
                          class="form-control"
                          formControlName="petName"
@@ -85,7 +85,8 @@
                 </div>
 
 
-                <div class="col-xs-6 col-md-1 dropdown show">
+                <div class="col-xs-6 col-md-2 dropdown show">
+                  <label>Pet type</label><br>
                   <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="petTypeDropdown"
                      data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     {{petType}}
@@ -97,7 +98,8 @@
                   </div>
                 </div>
 
-                <div class="col-xs-6 col-md-1">
+                <div class="col-xs-6 col-md-2 dropdown show">
+                  <label>Room Number</label><br>
                   <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="roomNumberDropdown"
                      data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     {{roomNumber}}
@@ -109,15 +111,16 @@
                   </div>
                 </div>
 
-                <div class="col-xs-6 col-md-4">
+                <div class="col-xs-6 col-md-3">
+                  <label>Begin date:</label><br>
                   <div class="form-group">
-                    Begin: <input class="form-control" formControlName="beginDate" name="date" placeholder="DD/MM/YYYY"
-                                  type="text"/>
+                    <input class="form-control" formControlName="beginDate" name="date" placeholder="DD/MM/YYYY" type="text"/>
                   </div>
                 </div>
-                <div class="col-xs-6 col-md-4">
+                <div class="col-xs-6 col-md-3">
+                  <label>End date:</label><br>
                   <div class="form-group">
-                    End: <input class="form-control" formControlName="endDate" name="date" placeholder="DD/MM/YYYY" type="text"/>
+                    <input class="form-control" formControlName="endDate" name="date" placeholder="DD/MM/YYYY" type="text"/>
                   </div>
                 </div>
 
@@ -125,7 +128,7 @@
 
               <div class="row">
                 <div class="col-xs-6 col-md-6">
-                  <label class="sr-only">Comment</label>
+                  <label class="sr-only">Comment</label><br>
                   <textarea name="petComment" cols="100%" rows="5"></textarea>
                 </div>
               </div>
@@ -133,7 +136,7 @@
               <div class="row">
                 <div class="col-xs-6 col-md-1">
                   <button type="submit" class="btn btn-sm btn-success"
-                          [disabled]="!petForm.valid && selectedAllDropdownMenus()">Add
+                          [disabled]="!(petForm.valid && selectedAllDropdownForPet())">Add
                   </button>
                 </div>
               </div>
