--- a/src/app/room/room-create/room-create.component.html
+++ b/src/app/room/room-create/room-create.component.html
@@ -4,31 +4,42 @@
       <section>
         <form novalidate [formGroup]="roomForm" (ngSubmit)="onSubmit()">
           <fieldset>
-            <div class="form-group">
-              <label>Room Number</label>
-              <input type="text"
-                     class="form-control"
-                     formControlName="roomNumber">
-            </div>
+            <div class="row">
 
-            <div class="form-group">
-              <label>Number of places</label>
-              <input type="text"
-                     class="form-control"
-                     formControlName="numberOfPlaces">
-            </div>
+              <div class="col-xs-6 col-md-4">
+                <label>Room Number</label>
+                <input type="text"
+                       class="form-control"
+                       formControlName="roomNumber">
+              </div>
 
-            <div class="form-group">
-              <label>pet Type</label>
-              <input type="text"
-                     class="form-control"
-                     formControlName="petType">
+              <div class="col-xs-6 col-md-4">
+                <label>Number of places</label>
+                <input type="text"
+                       class="form-control"
+                       formControlName="numberOfPlaces">
+              </div>
+
+
+              <div class="col-xs-6 col-md-3 dropdown show">
+                <label>Pet Type in room</label><br>
+                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="petTypeDropdown"
+                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  {{petType}}
+                </a>
+
+                <div class="dropdown-menu dropdown-menu-right">
+                  <button *ngFor="let type of petTypes" class="dropdown-item" type="button"
+                          (click)="setPetType(type)">{{type}}</button>
+                </div>
+              </div>
             </div>
           </fieldset>
 
-          <button type="submit" class="btn btn-primary"  [disabled]="!roomForm.valid">Submit</button>
+          <br/>
+          <button type="submit" class="btn btn-primary"  [disabled]="!roomForm.valid || petTypeIsValid()">Submit
+          </button>
           <button type="button" class="btn btn-warning" (click)="redirectRoomPage()">Cancel</button>
-          <pre>{{roomForm.value | json}}</pre>
         </form>
       </section>
     </div>
