--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,11 @@
       <a class="navbar-brand" href="#">Heaven For Pets</a>
     </div>
     <ul class="nav navbar-collapse">
+
       <li><a routerLink="/room" routerLinkActive="active">Rooms</a></li>
       <li><a routerLink="/hotel" routerLinkActive="active">Hotel</a></li>
+      <li><a routerLink="/food" routerLinkActive="active">Food</a></li>
+
     </ul>
   </div>
 </nav>
