--- a/src/app/room/room-create/room-create.component.html
+++ b/src/app/room/room-create/room-create.component.html
@@ -20,7 +20,6 @@
                        formControlName="numberOfPlaces">
               </div>
 
-
               <div class="col-xs-6 col-md-3 dropdown show">
                 <label>Pet Type in room</label><br>
                 <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="petTypeDropdown"
@@ -33,6 +32,14 @@
                           (click)="setPetType(type)">{{type}}</button>
                 </div>
               </div>
+
+              <div class="col-xs-6 col-md-4">
+                <label>Price</label>
+                <input type="text"
+                       class="form-control"
+                       formControlName="price">
+              </div>
+
             </div>
           </fieldset>
 
