pageable in rooms

--- a/src/app/food/food-list/food-list.component.html
+++ b/src/app/food/food-list/food-list.component.html
@@ -33,7 +33,7 @@
 
       <section class="main">
 
-        <table class="table">
+        <table class="table table table-striped table-bordered">
           <thead>
           <tr>
 
