--- a/src/app/hotel/hotel-list/hotel-list.component.html
+++ b/src/app/hotel/hotel-list/hotel-list.component.html
@@ -20,7 +20,7 @@
 
       <section class="main">
 
-        <table class="table">
+        <table class="table table table-striped table-bordered">
           <thead>
           <tr>
             <th>First Name</th>
@@ -54,7 +54,7 @@
                         <h4 class="modal-title">Modal Header</h4>
                       </div>
                       <div class="modal-body">
-                        <table class="table">
+                        <table class="table table table-striped table-bordered">
                           <thead>
                           <tr>
                             <th class="col-md-3">Name</th>
