--- a/src/app/room/room-list/room-list.component.html
+++ b/src/app/room/room-list/room-list.component.html
@@ -23,7 +23,12 @@
         <table class="table table-striped table-bordered">
           <thead>
             <tr>
-              <th>#</th>
+              <th>
+                <a href="" ng-click="sortType = 'roomNumber'">
+                  #
+                  <span ng-show="sortType == 'name'" class="fa fa-caret-down"></span>
+                </a>
+              </th>
               <th>Number of places</th>
               <th>Free places</th>
               <th>Pet type</th>
@@ -45,6 +50,13 @@
             </tr>
           </tbody>
         </table>
+        <hr>
+
+        <ul class="nav nav-pills">
+          <li class="nav-item" *ngFor="let p of pages; let i = index">
+            <a class="nav-link" href="" (click)="setPage(i,$event)" [ngClass]="{'active':i==page}">{{i}}</a>
+          </li>
+        </ul>
 
       </section>
     </div>
