--- a/src/app/food/food-create/food-create.component.html
+++ b/src/app/food/food-create/food-create.component.html
@@ -74,7 +74,7 @@
       </form>
 
       <br/>
-      <table class="table">
+      <table class="table table table-striped table-bordered">
         <thead>
         <tr>
           <th class="col-xs-6 col-md-1">#</th>
