--- a/src/app/room/room-list/room-list.component.html
+++ b/src/app/room/room-list/room-list.component.html
@@ -24,15 +24,40 @@
           <thead>
             <tr>
               <th>
-                <a href="" ng-click="sortType = 'roomNumber'">
+                <button type="button" class="btn" (click)="sort('roomNumber', $event)" href="">
                   #
-                  <span ng-show="sortType == 'name'" class="fa fa-caret-down"></span>
-                </a>
+                </button>
+                <span *ngIf="!asc && isSorted === 'roomNumber'" class="glyphicon glyphicon-sort-by-order"></span>
+                <span *ngIf="asc && isSorted === 'roomNumber'" class="glyphicon glyphicon-sort-by-order-alt"></span>
               </th>
-              <th>Number of places</th>
-              <th>Free places</th>
-              <th>Pet type</th>
-              <th>Price</th>
+              <th>
+                <button type="button" class="btn" (click)="sort('numberOfPlaces', $event)" href="">
+                Number of places
+                </button>
+                <span *ngIf="!asc && isSorted === 'numberOfPlaces'" class="glyphicon glyphicon-sort-by-order"></span>
+                <span *ngIf="asc && isSorted === 'numberOfPlaces'" class="glyphicon glyphicon-sort-by-order-alt"></span>
+              </th>
+              <th>
+                <button type="button" class="btn" (click)="sort('freePlaces', $event)" href="">
+                  Free places
+                </button>
+                <span *ngIf="!asc && isSorted === 'freePlaces'" class="glyphicon glyphicon-sort-by-order"></span>
+                <span *ngIf="asc && isSorted === 'freePlaces'" class="glyphicon glyphicon-sort-by-order-alt"></span>
+              </th>
+              <th>
+                <button type="button" class="btn" (click)="sort('petType', $event)" href="">
+                  Pet type
+                </button>
+                <span *ngIf="!asc && isSorted === 'petType'" class="glyphicon glyphicon-sort-by-alphabet"></span>
+                <span *ngIf="asc && isSorted === 'petType'" class="glyphicon glyphicon-sort-by-alphabet-alt"></span>
+              </th>
+              <th>
+                <button type="button" class="btn" (click)="sort('price', $event)" href="">
+                  Price
+                </button>
+                <span *ngIf="!asc && isSorted === 'price'" class="glyphicon glyphicon-sort-by-order"></span>
+                <span *ngIf="asc && isSorted === 'price'" class="glyphicon glyphicon-sort-by-order-alt"></span>
+              </th>
               <th></th>
             </tr>
           </thead>
