--- a/src/app/room/room-create/room-create.component.html
+++ b/src/app/room/room-create/room-create.component.html
@@ -8,9 +8,11 @@
 
               <div class="col-xs-6 col-md-4">
                 <label>Room Number</label>
-                <input type="text"
+                <input *ngIf="isNewRoom()" type="text"
                        class="form-control"
                        formControlName="roomNumber">
+
+                <a *ngIf="!isNewRoom()" class="btn btn-success disabled">{{roomNumber}}</a>
               </div>
 
               <div class="col-xs-6 col-md-4">
