--- a/src/app/room/room-create/room-create.component.html
+++ b/src/app/room/room-create/room-create.component.html
@@ -50,11 +50,18 @@
                 </div>
               </div>
 
-              <div class="col-xs-6 col-md-4">
+              <div class="col-xs-6 col-md-2">
                 <label>Price</label>
                 <input type="text"
                        class="form-control"
                        formControlName="price">
+              </div>
+
+              <div *ngIf="!isPet()" class="col-xs-6 col-md-2">
+                <label>Temperature</label>
+                <input type="text"
+                       class="form-control"
+                       formControlName="temperature">
               </div>
 
             </div>
