--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     </div>
     <ul class="nav navbar-collapse">
 
+      <li><a routerLink="/home" routerLinkActive="active">Login</a></li>
       <li><a routerLink="/room" routerLinkActive="active">Rooms</a></li>
       <li><a routerLink="/hotel" routerLinkActive="active">Hotel</a></li>
       <li><a routerLink="/food" routerLinkActive="active">Food</a></li>
