--- a/src/app/room/room-list/room-list.component.html
+++ b/src/app/room/room-list/room-list.component.html
@@ -37,11 +37,11 @@
           <thead>
             <tr>
               <th>
-                <button type="button" class="btn" (click)="sort('roomNumber', $event)" href="">
+                <button type="button" class="btn" (click)="sort('roomAnimalNumber', $event)" href="">
                   #
                 </button>
-                <span *ngIf="!asc && isSorted === 'roomNumber'" class="glyphicon glyphicon-sort-by-order"></span>
-                <span *ngIf="asc && isSorted === 'roomNumber'" class="glyphicon glyphicon-sort-by-order-alt"></span>
+                <span *ngIf="!asc && isSorted === 'roomAnimalNumber'" class="glyphicon glyphicon-sort-by-order"></span>
+                <span *ngIf="asc && isSorted === 'roomAnimalNumber'" class="glyphicon glyphicon-sort-by-order-alt"></span>
               </th>
               <th>
                 <button type="button" class="btn" (click)="sort('numberOfPlaces', $event)" href="">
