--- a/src/app/hotel/hotel-create/hotel-create.component.html
+++ b/src/app/hotel/hotel-create/hotel-create.component.html
@@ -75,7 +75,7 @@
 
           <div class="row">
             <div class="col-xs-6 col-md-2">
-              <label>Pet Name</label><br>
+              <label>Animal Name</label><br>
               <input type="text"
                      class="form-control"
                      formControlName="petName"
@@ -100,11 +100,11 @@
               <label>Room Number</label><br>
               <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="roomNumberDropdown"
                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                {{roomNumber}}
+                {{roomAnimalNumber}}
               </a>
 
               <div class="dropdown-menu dropdown-menu-right">
-                <button *ngFor="let room of rooms" class="dropdown-item" type="button"
+                <button *ngFor="let room of animalRooms" class="dropdown-item" type="button"
                         (click)="setRoom(room)">{{room.roomNumber}}</button>
               </div>
             </div>
@@ -128,7 +128,7 @@
 
             <div class="col-xs-6 col-md-4 dropdown show">
               <label>Breakfast</label><br>
-              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="petBreakfastDropdown"
+              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="petAnimalBreakfastDropdown"
                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 {{petBreakfast.name}}: {{petBreakfast.taste}}
               </a>
@@ -141,7 +141,7 @@
 
             <div class="col-xs-6 col-md-4 dropdown show">
               <label>Dinner</label><br>
-              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="petDinnerDropdown"
+              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="petAnimalDinnerDropdown"
                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 {{petDinner.name}}: {{petDinner.taste}}
               </a>
@@ -154,7 +154,7 @@
 
             <div class="col-xs-6 col-md-4 dropdown show">
               <label>Supper</label><br>
-              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="petSupperDropdown"
+              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="petAnimalSupperDropdown"
                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 {{petSupper.name}}: {{petSupper.taste}}
               </a>
@@ -177,7 +177,91 @@
           <div class="row">
             <div class="col-xs-6 col-md-1">
               <button type="submit" class="btn btn-sm btn-success"
-                      [disabled]="!(petForm.valid && selectedAllDropdownForPet())">Add
+                      [disabled]="!(petForm.valid && selectedAllDropdownForPet())">Add pet
+              </button>
+            </div>
+          </div>
+
+        </form>
+
+
+
+        <form novalidate [formGroup]="plantForm" (ngSubmit)="onSubmitPlant()">
+
+          <div class="row">
+            <div class="col-xs-6 col-md-2">
+              <label>Plant Name</label><br>
+              <input type="text"
+                     class="form-control"
+                     formControlName="plantName"
+                     placeholder="Plant Name">
+            </div>
+
+            <div class="col-xs-6 col-md-2">
+              <label>Min temp.</label><br>
+              <input type="text"
+                     class="form-control"
+                     formControlName="minTemperature"
+                     placeholder="Plant min temp"
+                     (input)="minTempChange()">
+            </div>
+
+            <div class="col-xs-6 col-md-2">
+              <label>Max temp.</label><br>
+              <input type="text"
+                     class="form-control"
+                     formControlName="maxTemperature"
+                     placeholder="Plant max temp"
+                     (input)="maxTempChange()">
+            </div>
+
+            <div class="col-xs-6 col-md-2 dropdown show">
+              <label>Room Number</label><br>
+              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="roomPlantNumberDropdown"
+                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                {{roomPlantNumber}}
+              </a>
+
+              <div class="dropdown-menu dropdown-menu-right">
+                <button *ngFor="let room of plantRooms" class="dropdown-item" type="button"
+                        (click)="setRoom(room)">{{room.roomNumber}}</button>
+              </div>
+            </div>
+
+            <div class="col-xs-6 col-md-3">
+              <label>Begin date:</label><br>
+              <div class="form-group">
+                <input class="form-control" formControlName="beginDate" name="date" placeholder="DD/MM/YYYY" type="text"/>
+              </div>
+            </div>
+            <div class="col-xs-6 col-md-3">
+              <label>End date:</label><br>
+              <div class="form-group">
+                <input class="form-control" formControlName="endDate" name="date" placeholder="DD/MM/YYYY" type="text"/>
+              </div>
+            </div>
+
+            <div class="col-xs-6 col-md-2">
+              <label>To Water</label><br>
+              <input type="text"
+                     class="form-control"
+                     formControlName="toWater"
+                     placeholder="Plant to water">
+            </div>
+
+          </div>
+
+          <div class="row">
+            <div class="col-xs-6 col-md-6">
+              <label class="sr-only">Comment</label><br>
+              <textarea name="petComment" cols="100%" rows="5"></textarea>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-xs-6 col-md-1">
+              <button type="submit" class="btn btn-sm btn-success"
+                      [disabled]="!(petForm.valid && selectedAllDropdownForPet())">Add pet
               </button>
             </div>
           </div>
